# PAMIS

./: README.md
2024/: README.md
2024/PAMI_soft/: platformio.ini
2024/PAMI_soft/src/: base_roulante.cpp  base_roulante.h  main.cpp
2024/carte_pami/: carte_pami.kicad_prl  carte_pami.kicad_pro
2025/carte_elec/: pami.kicad_pcb  pami.kicad_pro
2025/code/pami2025/: CMakeLists.txt  pami2025.cpp
2025/code_PAMI_2025/: platformio.ini
2026/pamis_2026/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
2026/pamis_2026/main/: Astar.cpp  Astar.h  CMakeLists.txt  Kconfig.projbuild  SAP_controller.cpp  SAP_controller.h  config.h  evitement.cpp  evitement.h  imu.cpp  imu.h  locomotion.cpp  locomotion.h  main.c  main.cpp  pins_config.h  radar_vl53.cpp  radar_vl53.h  scs009.cpp  scs009.h  strat.cpp  strat.h  stratWallid.cpp  stratWallid.h  sts3032.cpp  sts3032.h  telelogs.c  telelogs.cpp  telelogs.h  utils.cpp  utils.h  websocket_server.cpp  websocket_server.h  wifi_setup.c  wifi_setup.cpp  wifi_setup.h
2026/pamis_2026/main/wifi/: protoCom.cpp  protoCom.h  telelogs.cpp  telelogs.h  websocket_server.cpp  wifi_setup.cpp  wifi_setup.h
PAMI_soft/: platformio.ini
PAMI_soft/include/: PinLayout.h
PAMI_soft/src/: Gpios.cpp  Gpios.h  base_roulante.cpp  base_roulante.h  deplacement.cpp  deplacement.h  main.cpp  pilot.cpp  pilot.h  vision.cpp  vision.h
UCD/: platformio.ini
UCD/include/: PinLayout.h
UCD/src/: main.cpp
carte_pami/: carte_pami.kicad_pcb  carte_pami.kicad_prl  carte_pami.kicad_pro  carte_pami.kicad_sch
(+29 files in other folders)
